CMAKE_MINIMUM_REQUIRED(VERSION 3.10.2 FATAL_ERROR)

FIND_PACKAGE(gz-cmake3 REQUIRED)

PROJECT(TopicController)

GZ_FIND_PACKAGE(gz-plugin2 REQUIRED COMPONENTS register)

GZ_FIND_PACKAGE(gz-sim8 REQUIRED)

ADD_LIBRARY(TopicControl SHARED TopicControl.cc)
SET_PROPERTY(TARGET TopicControl PROPERTY CMAKE_CXX_STANDARD 17)
TARGET_LINK_LIBRARIES(TopicControl
  PUBLIC gz-plugin2::gz-plugin2
  PUBLIC gz-sim8::gz-sim8
)
